k8s-aks/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebanking
  labels:
    app.kubernetes.io/part-of: homebanking
